# ctxgraph

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  EXAMPLE_PR_IMPACT_CHECK.md  LICENSE  README.md  ROADMAP.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ctxgraph-impact-demo.yml  python-package.yml
examples/: basic_usage.py  demo.py  demo_real_project.py  parse_codebase.py  query_engine_demo.py  retrieval_demo.py
scripts/: github_action.py  run_impact_preview.py
src/ctxgraph/: __init__.py
src/ctxgraph/cli/: __init__.py  __main__.py  main.py
src/ctxgraph/exporters/: __init__.py  json_exporter.py
src/ctxgraph/graph/: __init__.py  edge.py  graph.py  node.py  types.py
src/ctxgraph/io/: __init__.py  json_graph.py
src/ctxgraph/parser/: __init__.py  ast_parser.py  builder.py  discovery.py  resolver.py
src/ctxgraph/query/: __init__.py  engine.py
src/ctxgraph/retrieval/: __init__.py  engine.py  scoring.py
tests/: conftest.py
tests/fixtures/sample_project/: __init__.py  api.py  auth.py  db.py  models.py  services.py  test_models.py  utils.py
tests/test_action/: test_github_action.py
tests/test_cli/: test_main.py
tests/test_graph/: test_graph.py
tests/test_io/: test_json_graph.py
tests/test_parser/: test_ast_parser.py  test_builder.py  test_discovery.py  test_resolver.py
tests/test_query/: test_engine.py
tests/test_retrieval/: test_engine.py  test_scoring.py
